# AI-finance-assistant

./: .env  .env.example  README.md  pyproject.toml
app/: logger.py
app/api/: assistant.py
app/core/: openai_client.py  security.py
app/crud/: feedback.py  survey.py
app/db/: base.py  check_tables.py  init_db.py
app/models/: assistant.py  assistant_message.py
app/schemas/: assistant.py  feedback.py
app/tests/: test_db.py
backend/: pyproject.toml
backend/app/: config.py  logger.py  main.py
backend/app/api/: assistant.py  assistant_usage.py  auth.py
backend/app/core/: limiter.py  openai_client.py  security.py
backend/app/db/: base.py
backend/app/models/: assistant_message.py
backend/app/schemas/: assistant.py  survey.py
